tests/NormalTests/paczka1/fuzzy1/35484475.err
Error in line 10: rZffW07OO3Z A688 5,8
Error in line 11: eoQF A621 9,9
Error in line 17: H8oix A688 82,5
Error in line 9: JcHlMPlxg A688 95,2
Error in line 32: JcHlMPlxg A621 183,0
